Src\Changes.txt
Add new items to top.
(This summarizes all changes to all files under Src, including Src\Languages.)

2006-11-11 Takashi
 PATCH: [ 1586689 ] True color bookmark icon
  Src/editlib: ccrystaltextview.cpp
  Src/res: mg_icons.bmp

2006-11-09 Gal
 PATCH: [ 1590737 ] BCMenu update to v3.036
  Src: BCMenu.cpp BCMenu.h

2006-11-09 Kimmo
 PATCH: [ 1591532 ] Remove unused XmlDoc class
  Src: Merge.dsp
  Src removed files: XmlDoc.cpp XmlDoc.h

2006-11-07 Kimmo
 Add PCRE 6.7 (with windows build files from ftp://ftp.csx.cam.ac.uk/pub/software/programming/pcre/Contrib/)
  New folder: /Externals/pcre
 PATCH: [ 1591605 ] Add PCRE regexps and convert file filtering to PCRE
  Src: FileFilterMgr.cpp FileFilterMgr.h Merge.dsp Plugins.cpp
  Src new files: Ucs2Utf8.cpp Ucs2Utf8.h

2006-11-06 Takashi
 PATCH: [ 1586705 ] DirView icons (Tim made [not]equalfile.ico)
  Src/res: equalfile.ico fileskip.ico lfile.ico notequalfile.ico rfile.ico

2006-11-06 Kimmo
 PATCH: [ 1590892 ] Handle unicode paths for project files
  Src: ProjectFile.cpp

2006-11-03 Kimmo
 PATCH: [ 1589427 ] Add back read-only handling for project files
  Src: ProjectFile.cpp
 PATCH: [ 1589438 ] Add read-only info to ProjectFile dialog
  Src: MainFrm.cpp
 PATCH: [ 1589563 ] Fix crash with weird filetimes (and cleanup the code)
  Src: DiffFileInfo.cpp DiffFileInfo.h DirScan.cpp DirViewColHandler.cpp
   DirViewColItems.cpp FileInfo.cpp FileInfo.h

2006-11-03 Tim
 PATCH: [ 1589601 ] Add "ReDim" keyword to Visual Basic highlighter
  Src\editlib: basic.cpp

2006-11-01 Kimmo
 Add Expat version 2.0.0 to /Externals/expat (revision: 3749)
  New folder: /Externals/Expat
 Add SCEW version 0.4.0 to /Externals/scew (revision: 3750)
  New folder: /Externals/scew
 PATCH: [ 1587574 ] Convert project files code to use expat+SCEW
  Src: Merge.dsp ProjectFile.cpp ProjectFile.h
  Remove folder: Src/ExpatLib/*
 PATCH: [ 1588212 ] Add manifest file to resource file
  Src: Merge.rc
  Src/Languages/*: Merge*.rc